@@ -301,6 +301,7 @@ wxX11:
 All:
 
 - Fixed bug with parsing some dates in wxDateTime (Bob Pesner)
+- Fixed bug with parsing negative time zones in wxDateTime::ParseRfc822Date()
 
 All (GUI):
 
